// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`maxHeight renders 0 1`] = `
Array [
  .c0 {
  max-height: 0;
}

<div
    className="c0"
  />,
  .c0 {
  max-height: 0;
}

<div
    className="c0"
  />,
  .c0 {
  max-height: 0;
}

<div
    className="c0"
  />,
  .c0 {
  max-height: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`maxHeight renders function 1`] = `
Array [
  .c0 {
  max-height: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  max-height: has;
}

<div
    className="c0"
  />,
  .c0 {
  max-height: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  max-height: has;
}

<div
    className="c0"
  />,
]
`;

exports[`maxHeight renders invalid theme path 1`] = `
Array [
  .c0 {
  max-height: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  max-height: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  max-height: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  max-height: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`maxHeight renders negative number 1`] = `
Array [
  .c0 {
  max-height: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  max-height: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  max-height: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  max-height: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`maxHeight renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  max-height: July;
}

@media screen and (min-width:November) {
  .c0 {
    max-height: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-height: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-height: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    max-height: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  max-height: July;
}

@media screen and (min-width:November) {
  .c0 {
    max-height: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-height: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-height: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    max-height: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  max-height: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    max-height: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-height: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-height: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    max-height: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  max-height: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    max-height: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-height: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-height: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    max-height: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`maxHeight renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    max-height: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-height: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-height: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    max-height: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    max-height: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-height: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-height: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    max-height: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    max-height: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-height: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-height: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    max-height: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    max-height: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-height: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-height: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    max-height: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`maxHeight renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  max-height: July;
}

@media May {
  .c0 {
    max-height: August;
  }
}

@media April {
  .c0 {
    max-height: September;
  }
}

@media January {
  .c0 {
    max-height: November;
  }
}

@media April {
  .c0 {
    max-height: August;
  }
}

@media June {
  .c0 {
    max-height: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  max-height: July;
}

@media May {
  .c0 {
    max-height: August;
  }
}

@media April {
  .c0 {
    max-height: September;
  }
}

@media January {
  .c0 {
    max-height: November;
  }
}

@media April {
  .c0 {
    max-height: August;
  }
}

@media June {
  .c0 {
    max-height: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  max-height: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    max-height: November;
  }
}

@media April {
  .c0 {
    max-height: January;
  }
}

@media January {
  .c0 {
    max-height: December;
  }
}

@media April {
  .c0 {
    max-height: April;
  }
}

@media June {
  .c0 {
    max-height: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  max-height: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    max-height: November;
  }
}

@media April {
  .c0 {
    max-height: January;
  }
}

@media January {
  .c0 {
    max-height: December;
  }
}

@media April {
  .c0 {
    max-height: April;
  }
}

@media June {
  .c0 {
    max-height: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`maxHeight renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    max-height: July;
  }
}

@media April {
  .c0 {
    max-height: August;
  }
}

@media January {
  .c0 {
    max-height: September;
  }
}

@media April {
  .c0 {
    max-height: November;
  }
}

@media June {
  .c0 {
    max-height: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    max-height: July;
  }
}

@media April {
  .c0 {
    max-height: August;
  }
}

@media January {
  .c0 {
    max-height: September;
  }
}

@media April {
  .c0 {
    max-height: November;
  }
}

@media June {
  .c0 {
    max-height: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    max-height: January;
  }
}

@media April {
  .c0 {
    max-height: December;
  }
}

@media January {
  .c0 {
    max-height: April;
  }
}

@media April {
  .c0 {
    max-height: May;
  }
}

@media June {
  .c0 {
    max-height: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    max-height: January;
  }
}

@media April {
  .c0 {
    max-height: December;
  }
}

@media January {
  .c0 {
    max-height: April;
  }
}

@media April {
  .c0 {
    max-height: May;
  }
}

@media June {
  .c0 {
    max-height: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`maxHeight renders postitive number 1`] = `
Array [
  .c0 {
  max-height: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  max-height: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  max-height: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  max-height: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`maxHeight renders string 1`] = `
Array [
  .c0 {
  max-height: July;
}

<div
    className="c0"
  />,
  .c0 {
  max-height: July;
}

<div
    className="c0"
  />,
  .c0 {
  max-height: June;
}

<div
    className="c0"
  />,
  .c0 {
  max-height: June;
}

<div
    className="c0"
  />,
]
`;

exports[`maxHeight renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`maxHeight renders valid theme path 1`] = `
Array [
  .c0 {
  max-height: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  max-height: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  max-height: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  max-height: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
